--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,12 +2,13 @@
   Devour It!
 </h1>
 <div class="container">
+  <h2>I Want These!</h2>
   <ul>
     {{#each burgers}}
       {{#unless devoured}}
         <li>
           {{burger_name}}
-          <button class="view" data-id="{{id}}" type="submit">
+          <button class="change-devoured" data-id="{{id}}" type="submit">
            EAT ME!
           </button>
         </li>
@@ -15,6 +16,9 @@
       {{/unless}}
     {{/each}}
   </ul>
+</div>
+<div class="container">
+  <h2>I Been Had These...</h2>
   <ul>
     {{#each burgers}}
       {{#if devoured}}
