--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,7 @@
       {{#unless devoured}}
         <li>
           {{burger_name}}
-          <button class="change-devoured" data-id="{{id}}" type="submit">
+          <button class="change-devoured btn btn-primary" data-id="{{id}}" type="submit">
            EAT ME!
           </button>
         </li>
